update_password updated

--- a/app/views/refinery/admin/users/update_password.html.erb
+++ b/app/views/refinery/admin/users/update_password.html.erb
@@ -4,22 +4,29 @@
   <section id="popular-topics" class="index off-white-1-bg">
     <div class="container margin-bottom">
       <div class="row">
-        <div class="col-sm-10 col-sm-offset-1">
+        <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
+          <div class="text-center margin-bottom-md">
+            <%= render "/refinery/svg/elephant" %>
+            <h2>Elephant CMS</h2>
+          </div>
 
-          <h2>Set Your Password</h2>
+          <h5 class="grey-6">Set Your password</h5>
 
           <%= form_for [refinery, :admin, @user] do |f| %>
             <%= render '/refinery/admin/error_messages',
                        :object => @user,
                        :include_object_name => true %>
+            <div class='form-group'>
+              <%= f.password_field :password, :placeholder => 'Password', :class => 'form-control input-lg', 'autofocus' => 'autofocus' %></p>
+            </div>
 
-            <p><%= f.label :password %><br />
-            <%= f.password_field :password %></p>
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation', :class => 'form-control input-lg' %></p>
+            </div>
 
-            <p><%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation %></p>
-
-            <p><%= f.submit 'Create password' %></p>
+            <div class="form-group">
+              <%= f.submit 'Create password' %>
+            </div>
           <% end %>
         </div>
       </div>
