finished moving invitable components from feast to glass. update password view uses login layout

--- a/app/views/refinery/admin/users/update_password.html.erb
+++ b/app/views/refinery/admin/users/update_password.html.erb
@@ -1,35 +1,17 @@
-<div id="article-index">
-  <section id="article-index-cover" class="cover">
-  </section>
-  <section id="popular-topics" class="index off-white-1-bg">
-    <div class="container margin-bottom">
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4">
-          <div class="text-center margin-bottom-md">
-            <%= render "/refinery/svg/elephant" %>
-            <h2>Elephant CMS</h2>
-          </div>
+<%= form_for [refinery, :admin, @user] do |f| %>
+  <%= render '/refinery/admin/error_messages',
+             :object => @user,
+             :include_object_name => true %>
+  <div class='form-group'>
+    <%= f.password_field :password, :placeholder => 'Password', :class => 'form-control input-lg', 'autofocus' => 'autofocus' %></p>
+  </div>
 
-          <h5 class="grey-6">Set Your password</h5>
+  <div class="form-group">
+    <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation', :class => 'form-control input-lg' %></p>
+  </div>
 
-          <%= form_for [refinery, :admin, @user] do |f| %>
-            <%= render '/refinery/admin/error_messages',
-                       :object => @user,
-                       :include_object_name => true %>
-            <div class='form-group'>
-              <%= f.password_field :password, :placeholder => 'Password', :class => 'form-control input-lg', 'autofocus' => 'autofocus' %></p>
-            </div>
+  <div class="form-group">
+    <%= f.submit 'Create password', :class => 'btn btn-primary btn-lg' %>
+  </div>
+<% end %>
 
-            <div class="form-group">
-              <%= f.password_field :password_confirmation, :placeholder => 'Password confirmation', :class => 'form-control input-lg' %></p>
-            </div>
-
-            <div class="form-group">
-              <%= f.submit 'Create password' %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
