--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -106,6 +106,10 @@ body{
   #sidebar-left-inner{
     top: 65px;
     height: calc(100% - 110px);
+    /* Hide scrollbar in chrome. */
+    &::-webkit-scrollbar {
+      display: none;
+    }
     overflow-y: scroll;
     overflow-x: hidden;
     padding-bottom: 15px;
