overflow-y for inner left nav set to auto instead of scroll

--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -110,7 +110,7 @@ body{
     &::-webkit-scrollbar {
       display: none;
     }
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     padding-bottom: 15px;
     li{
