--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -1,10 +1,10 @@
 <div id="glass-parking" style="display: none;">
-  <a id="glass-scms-module" href="" class="circle-icon add-module glass-control transitionable"><i class="gcicon gcicon-plus"></i></a>
-  <div id="glass-choose-module" class="new-module media-chooser clear glass-control">
+  <a id="glass-module-switcher" href="" class="circle-icon add-module glass-control transitionable" contenteditable=false><i class="gcicon gcicon-plus"></i></a>
+  <div id="glass-choose-module" class="new-module media-chooser clear glass-control" contenteditable=false>
     <a href="" id="glass-choose-module-img" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
     <a href="" id="glass-choose-module-vid" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
   </div>
-  <div id="glass-module-settings-vid" class="new-module media-chooser clear glass-control">
+  <div id="glass-module-settings-vid" class="new-module media-chooser clear glass-control" contenteditable=false>
     <!--a href="" class="circle-icon add-module glass-left-of-content"><i class="gcicon gcicon-plus glass-control-close"></i></a -->
     <form role="form">
       <div class="form-group">
