Integrate grande - needed a few adjustments

--- a/app/assets/stylesheets/glass/_manifest-backend.scss
+++ b/app/assets/stylesheets/glass/_manifest-backend.scss
@@ -27,3 +27,5 @@
 @import "glass/partials/components/icon-styles";
 @import "glass/partials/components/images";
 @import "glass/partials/components/ui-elements";
+@import "glass/partials/components/grande-editor";
+@import "glass/partials/components/grande-menu";
