page index updated so that new page button works

--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -5,7 +5,7 @@
       <h2 class="admin-title">Pages</h2>
       <div class="contextual-menu">
         <div class="contextual-options">
-          <button class="btn btn-link-grey">
+          <button class="btn btn-link-grey btn-anchor" data-url="<%= refinery.new_admin_page_path %>">
             <i class="gcicon gcicon-add"></i> <strong>Add page</strong>
           </button>
           <button id='reorder_action' class="btn btn-link-grey">
@@ -13,9 +13,6 @@
           </button>
           <button id='reorder_action_done' class="btn btn-link-grey" style="display: none;">
             <i class="gcicon gcicon-reorder"></i> <strong>Done</strong>
-          </button>
-          <button class="btn btn-link-grey">
-            <i class="gcicon gcicon-add"></i> <strong>Add page</strong>
           </button>
         </div> 
         <div class="search">
