--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -1,9 +1,5 @@
 /* -------------------- EDITOR -------------------- */
 
-*[contenteditable=true]{
-  /* white-space: pre-wrap;  Luke, why was this here?  ..it seems to mess up the choose vid interface */
-}
-
 [contenteditable=true]:empty:before,
 [contenteditable=true] p.empty:before{
   content: attr(glass-placeholder);
@@ -14,6 +10,11 @@
 [contenteditable=true] p.empty:before{
   content: 'New Paragraph...';
   position: absolute;
+}
+
+[contenteditable=true]{
+  outline: none;
+  border-color: $primary-fade !important;
 }
 
 .input-group{
@@ -31,20 +32,21 @@
 }
 
 #page-preview{
-  *[contenteditable=true]{
-      /* white-space: normal; Defaults to displaying all newlines and spaces */
+  .glass-edit-html{
+    *{
       border-left: 2px solid transparent;
       padding-left: 15px;
       margin-left: -17px;
       border-right: 2px solid transparent;
       padding-right: 15px;
       margin-right: -17px;
-    &:focus{
-      outline: none;
-      border-color: $primary-fade !important;
-    }
-    &:hover{
-      border-color: rgba($primary-fade, 0.3);
+      &.selected-module{
+        outline: none;
+        border-color: $primary-fade !important;
+      }
+      &:hover{
+        border-color: rgba($primary-fade, 0.3);
+      }
     }
   }
   .add-module{
@@ -70,45 +72,6 @@
             height: 42px;
           }
         }
-      }
-    }
-  }
-
-  .glass-left-of-content{
-    left: -45px;
-  }
-  
-  .highlight-editor{
-    background: $off-white;
-    border: 1px solid $grey-2;
-    @include border-radius($radius);
-    display: inline-block;
-    padding: 5px 10px;
-    &:after{
-      content: "";
-      position: absolute;
-      bottom: -7px;
-      left: 50%;
-      margin-left: -7px;
-      border-style: solid;
-      border-width: 7px 7px 0 7px;
-      border-color: $off-white transparent transparent transparent;
-    }
-    &:before{
-      content: "";
-      position: absolute;
-      bottom: -8px;
-      left: 50%;
-      margin-left: -8px;
-      border-style: solid;
-      border-width: 8px 8px 0 8px;
-      border-color: $grey-2 transparent transparent transparent;
-    }
-    a{
-      margin: 0 5px;
-      color: $grey-6;
-      &:hover{
-        color: $primary-dark;
       }
     }
   }
