--- a/app/views/refinery/admin/_form_actions.html.erb
+++ b/app/views/refinery/admin/_form_actions.html.erb
@@ -38,7 +38,7 @@
 <input type='hidden' name='dialog' value='true' />
 <% end %>
 
-<div class='form-actions<%= ' form-actions-dialog' if from_dialog? %> pull-left'>
+<div class='form-actions<%= ' form-actions-dialog' if from_dialog? %>'>
   <div class='form-actions-left'>
     <%= button_tag submit_button_text,
                    :type => :submit,
