--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 
     <%%= form_for [refinery, :<%= namespacing.underscore %>_admin, @<%= singular_name %>], html:
-    <%= image_attributes.any? ? {'data-model' => singular_name , class: 'form-with-image', 'data-field-name' => image_attributes.first} : {} %> do |f| -%>
+    <%= image_attributes.any? ? {'data-model' => singular_name , class: 'form-with-image margin-bottom', 'data-field-name' => image_attributes.first} : {} %> do |f| -%>
       <%%= render '/refinery/admin/error_messages',
                   :object => @<%= singular_name %>,
                   :include_object_name => true %>
