no-scroll class added to body when button is clicked for left or right sidebars

--- a/app/assets/stylesheets/glass/partials/layout/_pages.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_pages.scss
@@ -1,5 +1,9 @@
 /* -------------------- PAGES -------------------- */
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .login{
   background: $off-white;
   padding-top: 90px;
