--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -944,7 +944,9 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 }
 
 .btn-link{
-	color: $primary-color;
+  &:link, &:visited{
+	  color: $primary-color;
+	}
 	&:hover{
 		color: $primary-hover;
 		text-decoration: none;
@@ -952,7 +954,9 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 }
 
 .btn-link-grey{
-	color: $grey-6;
+  &:link, &:visited{
+	  color: $grey-6;
+	}
 	&:hover{
 		color: $primary-hover;
 		text-decoration: none;
