--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -197,7 +197,7 @@ body{
   }
   #sidebar-right-inner{
     width: 350px;
-    height: 90%;
+    height: calc(100% - 62px);
     padding: 15px 0 60px;
     top: 62px;
     overflow-y: scroll;
@@ -315,6 +315,13 @@ body{
           width: 100px;
           text-align: right;
           color: $grey-5;
+        }
+        .upload{
+          .file-preview{
+            width: 100%;
+            padding-top: 66%;
+            margin: 15px 0;
+          }
         }
         .actions{
           text-align: right;
@@ -508,12 +515,29 @@ body{
       font-weight: 500;
     }
   }
-
+  
+  .dropdown{
+    &:hover{
+      z-index: 1000;
+      .btn{
+        z-index: 1005;
+      }
+      .dropdown-menu{
+        visibility: visible;
+        opacity: 1;
+        transition: opacity 0.2s ease-in;
+      }
+    }
+  }
+  
   .dropdown-menu{
     z-index: 50;
     top: -2px;
     padding-top: 33px;
     border-radius: 0;
+    display: block;
+    visibility: hidden;
+    opacity: 0;
     li{
       &:first-child{
         border-top: 1px solid $grey-1;
