--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -506,8 +506,11 @@ body{
     height: 37px;
     line-height: 1.2;
   }
+  .btn{
+    @include transition-fix();
+    font-weight: 400;
+  }
   .btn-link-grey{
-    font-weight: 300;
     .gcicon{
       color: $grey-3;
     }
