--- a/app/views/refinery/layouts/login.html.erb
+++ b/app/views/refinery/layouts/login.html.erb
@@ -11,13 +11,13 @@
         <h1>Sorry but it looks like you are using an older browser</h1>
         <p class="lead">We do not support IE 4, please upgrade to the latest version of one of our recommended browsers.</p>
         <div class="col-sm-4">
-            <a href="" class="browser-download"><img src="http://glasscanvas.s3.amazonaws.com/chrome-logo.png" class="browser-logo"/>Chrome</a>
+            <a href="" class="browser-download"><img src="http://glasscanvas.s3.amazonaws.com/chrome-logo.png" class="browser-logo img-responsive"/>Chrome</a>
         </div>
         <div class="col-sm-4">
-            <a href="" class="browser-download"><img src="http://glasscanvas.s3.amazonaws.com/safari-logo.png" class="browser-logo"/>Safari</a>
+            <a href="" class="browser-download"><img src="http://glasscanvas.s3.amazonaws.com/safari-logo.png" class="browser-logo img-responsive"/>Safari</a>
         </div>
         <div class="col-sm-4">
-            <a href="" class="browser-download"><img src="http://glasscanvas.s3.amazonaws.com/firefox-logo.png" class="browser-logo"/>Firefox</a>
+            <a href="" class="browser-download"><img src="http://glasscanvas.s3.amazonaws.com/firefox-logo.png" class="browser-logo img-responsive"/>Firefox</a>
         </div>
         <div class="col-sm-12">
             <p>If for some reason you really need to use Internet Explorer please use <a href="http://windows.microsoft.com/en-ca/internet-explorer/ie-11-worldwide-languages">IE 11</a>.</p>
