browser-update styling page added to remove top-bar from showing

--- a/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
+++ b/app/assets/stylesheets/glass/_manifest-back-and-frontend.scss
@@ -47,6 +47,7 @@
 @import "canvas/bootstrap/panels";
 @import "canvas/bootstrap/wells";
 @import "canvas/bootstrap/close";
+@import "glass/partials/components/browser-update";
 
 // BOOTSTRAP: Components w/ JavaScript
 @import "canvas/bootstrap/tooltip";
