new person stuff

--- a/app/assets/stylesheets/glass/partials/components/_icons.scss
+++ b/app/assets/stylesheets/glass/partials/components/_icons.scss
@@ -211,3 +211,9 @@
 .gcicon-books:before {
   content: ")";
 }
+.gcicon-unchecked:before {
+  content: "*";
+}
+.gcicon-checked:before {
+  content: "+";
+}
