--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -87,7 +87,7 @@ html
       <% elsif content_for?(:admin_content) %>
         <%= yield :admin_content %>
       <% else %>
-        <div class="container">
+        <div class="container admin-page">
           <div class="row">
             <div class="col-sm-12">
               <%= yield %>
