--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -566,6 +566,12 @@ ul li{
   line-height: 1.4em;
 }
 
+.lead-sm{
+  margin-bottom: 28px;
+  font-size: 21px;
+  font-weight: 300;
+  line-height: 1.4;
+}
 
 
 /* -------------------- FORMS -------------------- */
