--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -490,6 +490,46 @@ a.pill{
 }
 
 
+
+/* -------------------- BROWSER UPDATE -------------------- */
+
+.browser-update-wrapper{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1000000;
+  background: rgba($white,0.95);
+  .browser-update{
+    padding-top: 120px;
+    h1{
+      margin-bottom: 15px;
+    }
+    .current-browser{
+      font-weight: 500;
+    }
+    .browser-download{
+      display: block;
+      text-align: center;
+      font-size: 21px;
+      font-weight: 600;
+      &:hover{
+        img{
+          opacity: .85;
+        }
+      }
+      img{
+        margin: 0 auto 15px;
+        max-width: 128px;
+        transition: .2s ease-out;
+      }
+    }
+    .ie-disclaimer{
+      padding-top: 60px;
+    }
+  }
+}
+
+
 /* -------------------- TYPOGRAPHY -------------------- */
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
