browser update test mode turned off

--- a/app/views/glass/_browser_javascripts.html.erb
+++ b/app/views/glass/_browser_javascripts.html.erb
@@ -9,7 +9,7 @@
     },
     l: false,                       // set a language for the message, e.g. "en"
     // overrides the default detection
-    test: true,                    // true = always show the bar (for testing)
+    test: false,                    // true = always show the bar (for testing)
     text: "",                       // custom notification html text
     text_xx: "",                    // custom notification text for language "xx"
     // e.g. text_de for german and text_it for italian
