showing browser-update-wrapper instead of just brower-update

--- a/app/views/glass/_browser_javascripts.html.erb
+++ b/app/views/glass/_browser_javascripts.html.erb
@@ -44,7 +44,7 @@
       default:
         break;
     }
-    var browserUpdateContainer = $('.browser-update');
+    var browserUpdateContainer = $('.browser-update-div');
     browserUpdateContainer.find('.current-browser').text(browserAbr + infos.browser.v);
     browserUpdateContainer.fadeIn(500);
   }
