--- a/app/views/glass/_browser_update.html.erb
+++ b/app/views/glass/_browser_update.html.erb
@@ -1,5 +1,5 @@
-<div class="browser-update-wrapper">
-  <div class="container browser-update" style="display: none;">
+<div class="browser-update-wrapper" style="display: none;">
+  <div class="container browser-update">
     <div class="row">
       <div class="col-sm-12">
         <h1>Sorry but it looks like your browser is out of date.</h1>
