--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -593,6 +593,64 @@ body{
   }
 }
 
+.collapse-toggle{
+  display: block;
+  width: 100%;
+  padding: 0 15px;
+  background: $white;
+  border: 1px solid $grey-3;
+  &:focus{
+    border: 1px solid $primary-hover !important;
+    h4{
+      color: $primary-hover;
+    }
+    .gcicon{
+      color: $primary-hover;
+    }
+  }
+  &:active{
+    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075), 0px 0px 6px 0px rgba($primary-color,0.3));
+  }
+  &.collapsed{
+    .gcicon-checked{
+      display: none;
+    }
+    .gcicon-unchecked{
+      display: flex;
+    }
+  }
+  &:hover{
+    border-color: $primary-hover;
+    h4{
+      color: $primary-hover;
+      transition: .2s ease-out;
+    }
+    .gcicon{
+      color: $primary-hover;
+      transition: .2s ease-out;
+    }
+  }
+  .gcicon-checked{
+    display: flex;
+  }
+  .gcicon-unchecked{
+    display: none;
+  }
+  .gcicon{
+    color: $grey-6;
+  }
+  .collapse-heading{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.collapse-box{
+  padding: 30px 0;
+}
+
 @media (max-width: 767px) {
   .contextual-menu {
     flex-wrap: wrap;
