--- a/app/views/refinery/inquiries/admin/inquiries/index.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/index.html.erb
@@ -1,32 +1,81 @@
 <% content_for :admin_content do %>
-  <section id='admin-page-content'>
-  <% if searching? %>
-    <%= render 'refinery/admin/search_header', :url => request.path.gsub("//", "/") %>
-    <% if @inquiries.any? %>
-      <%= will_paginate @inquiries %>
-      <ul id='sortable_list' class="list-unstyled">
-        <%= render :partial => 'inquiry', :collection => @inquiries %>
-      </ul>
-      <%= will_paginate @inquiries %>
-    <% else %>
-      <p><%= t('refinery.admin.search.no_results') %></p>
-    <% end %>
-  <% else %>
-    <% if @inquiries.any? -%>
-      <%= will_paginate @inquiries %>
-      <% group_by_date(@inquiries).each do |container| %>
-        <h3><%= l((inquiry_group = container.last).first.created_at, :format => :short) %></h3>
-        <ul id='sortable_list' class="list-unstyled">
-          <%= render :partial => 'inquiry', :collection => inquiry_group %>
-        </ul>
-      <% end %>
-      <%= will_paginate @inquiries %>
-    <% else -%>
-      <p>
-        <strong><%= t(".no_#{action_name == 'index' ? 'inquiries' : 'spam'}") %></strong>
-      </p>
-    <% end -%>
-  <% end %>
-  </section>
+<section id="admin-page-content" class="admin-index container-fluid">
+  <div class="row">
+    <div class="col-sm-12">
+      <div id="inquiry-index" class='pagination_container'>
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="admin-title">Inquiries</h2>
+            <div class="contextual-menu">
+              <%= render '/refinery/admin/search', :url => request.path.gsub("//", "/") %>
+              <div class="dropdown">
+                <button class="btn btn-link-grey icon-left" type="button" id="dropdown-sort">
+                  <i class="icon icon-file"></i> Inquiries <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li role="presentation">
+                    <%= link_to '<i class="gcicon gcicon-index"></i> '.html_safe + t('.inbox'),
+                                refinery.inquiries_admin_inquiries_path,
+                                { :role =>"menuitem" } %>
+                  </li>
+                  <li role="presentation">
+                    <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe + " #{t('.spam')} (#{@spam_count})",
+                                refinery.spam_inquiries_admin_inquiries_path,
+                                { :role =>"menuitem" } %>
+                  </li>
+                  <li role="presentation">
+                    <%= link_to '<i class="gcicon gcicon-edit"></i> '.html_safe + ' Who to notify',
+                                refinery.edit_inquiries_admin_setting_path(:inquiry_notification_recipients),
+                                { :class => 'open-semantic-modal-form', :role =>"menuitem" }
+                    %>
+                  </li>
+                  <li role="presentation">
+                    <%= link_to '<i class="gcicon gcicon-edit"></i> '.html_safe + ' Response email',
+                                refinery.edit_inquiries_admin_setting_path(:inquiry_confirmation_body),
+                                { :class => 'open-semantic-modal-form', :role =>"menuitem"}
+                    %>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 index-listing">
+            <% if searching? %>
+              <%= render 'refinery/admin/search_header', :url => request.path.gsub("//", "/") %>
+              <% if @inquiries.any? %>
+                <%= will_paginate @inquiries %>
+                <ul id='sortable_list' class="list-unstyled">
+                  <%= render :partial => 'inquiry', :collection => @inquiries %>
+                </ul>
+                <%= will_paginate @inquiries %>
+              <% else %>
+                <p><%= t('refinery.admin.search.no_results') %></p>
+              <% end %>
+            <% else %>
+              <% if @inquiries.any? -%>
+                <%= will_paginate @inquiries %>
+                <% group_by_date(@inquiries).each do |container| %>
+                  <h3><%= l((inquiry_group = container.last).first.created_at, :format => :short) %></h3>
+                  <ul id='sortable_list' class="list-unstyled">
+                    <%= render :partial => 'inquiry', :collection => inquiry_group %>
+                  </ul>
+                <% end %>
+                <%= will_paginate @inquiries %>
+              <% else -%>
+                <p>
+                  <strong><%= t(".no_#{action_name == 'index' ? 'inquiries' : 'spam'}") %></strong>
+                </p>
+              <% end -%>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <% end %>
+
 <%= render 'refinery/inquiries/admin/submenu' %>
