added semantic modals back in

--- a/app/views/refinery/inquiries/admin/inquiries/index.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/index.html.erb
@@ -76,6 +76,17 @@
   </div>
 </section>
 
+  <div id="inquiry-form-modal" class="ui modal large form-modal">
+    <i class="close icon"></i>
+    <div class="header">
+
+    </div>
+    <div class="content">
+
+    </div>
+  </div>
+
 <% end %>
 
 <%= render 'refinery/inquiries/admin/submenu' %>
+
