Added the option to put form actions in a sidebar

--- a/app/views/refinery/admin/_form_actions.html.erb
+++ b/app/views/refinery/admin/_form_actions.html.erb
@@ -38,6 +38,28 @@
 <input type='hidden' name='dialog' value='true' />
 <% end %>
 
+<% in_sidebar = defined?(sidebar) ? sidebar : false  %>
+<% if in_sidebar %>
+<div class="deliver row">
+  <div class="pull-left">
+    <a href="" class="circle-icon"><i class="gcicon gcicon-screen bump-down"></i></a>
+  </div>
+  <div class="pull-right">
+    <!--
+    <a href="" class="circle-icon save-page"><i class="gcicon gcicon-save"></i></a>
+    <a href="" class="circle-icon fluid-width publish-page"><i class="gcicon gcicon-publish"></i> <span>Publish</span></a>
+    -->
+    <%= button_tag "<i class='gcicon gcicon-save'></i> <span>#{submit_button_text}</span>".html_safe,
+                   :type => :submit,
+                   :id => submit_button_id,
+                   :name => nil,
+                   :class => "circle-icon fluid-width save-page",
+                   :tooltip => submit_button_title unless hide_submit %>
+  </div>
+</div>
+
+<a href="" class="delete"><i class="gcicon gcicon-trash"></i> Delete</a>
+<% else %>
 <div class='form-actions<%= ' form-actions-dialog' if from_dialog? %>'>
   <div class='form-actions-left'>
     <%= button_tag submit_button_text,
@@ -71,3 +93,4 @@
     <%= local_assigns[:after_delete_button] -%>
   </div>
 </div>
+<% end %>
