--- a/app/views/refinery/inquiries/admin/inquiries/index.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/index.html.erb
@@ -42,33 +42,36 @@
         </div>
         <div class="row">
           <div class="col-xs-12 index-listing">
-            <% if searching? %>
-              <%= render 'refinery/admin/search_header', :url => request.path.gsub("//", "/") %>
-              <% if @inquiries.any? %>
-                <%= will_paginate @inquiries %>
-                <ul id='sortable_list' class="list-unstyled">
-                  <%= render :partial => 'inquiry', :collection => @inquiries %>
-                </ul>
-                <%= will_paginate @inquiries %>
-              <% else %>
-                <p><%= t('refinery.admin.search.no_results') %></p>
-              <% end %>
-            <% else %>
-              <% if @inquiries.any? -%>
-                <%= will_paginate @inquiries %>
-                <% group_by_date(@inquiries).each do |container| %>
-                  <h3><%= l((inquiry_group = container.last).first.created_at, :format => :short) %></h3>
+            <div class="sortable_list">
+              <% if searching? %>
+                <% if @inquiries.any? %>
+                  <%= will_paginate @inquiries %>
                   <ul id='sortable_list' class="list-unstyled">
-                    <%= render :partial => 'inquiry', :collection => inquiry_group %>
+                    <%= render :partial => 'inquiry', :collection => @inquiries %>
+                  </ul>
+                  <%= will_paginate @inquiries %>
+                <% else %>
+                  <ul id='sortable_list' class="list-unstyled">
+                    <li><%= t('refinery.admin.search.no_results') %></li>
                   </ul>
                 <% end %>
-                <%= will_paginate @inquiries %>
-              <% else -%>
-                <p>
-                  <strong><%= t(".no_#{action_name == 'index' ? 'inquiries' : 'spam'}") %></strong>
-                </p>
-              <% end -%>
-            <% end %>
+              <% else %>
+                <% if @inquiries.any? -%>
+                  <%= will_paginate @inquiries %>
+                  <% group_by_date(@inquiries).each do |container| %>
+                    <h3><%= l((inquiry_group = container.last).first.created_at, :format => :short) %></h3>
+                    <ul id='sortable_list' class="list-unstyled">
+                      <%= render :partial => 'inquiry', :collection => inquiry_group %>
+                    </ul>
+                  <% end %>
+                  <%= will_paginate @inquiries %>
+                <% else -%>
+                  <p>
+                    <strong><%= t(".no_#{action_name == 'index' ? 'inquiries' : 'spam'}") %></strong>
+                  </p>
+                <% end -%>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
