glass_engine: -- wymeditor (for text_area) & update show view
 - This is in preparation for an --edit-in-place option (replacement for
   wymeditor)
 - The show view is just closer to what we end up making it

--- a/lib/generators/refinery/glass_engine/templates/app/models/refinery/namespace/singular_name.rb.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/models/refinery/namespace/singular_name.rb.erb
@@ -32,6 +32,12 @@ module Refinery
 
       belongs_to :<%= a.name %>, :class_name => '::Refinery::Resource'
 <% end -%>
+
+      class << self
+        def get_all
+          order('position ASC')
+        end
+      end
     end
   end
 end
