--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/plural_name/show.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/plural_name/show.html.erb
@@ -2,38 +2,42 @@
   <%%= @<%= singular_name %><% if (title = attributes.detect { |a| a.type.to_s == "string" }).present? %>.<%= title.name %><% else %>.title<% end %> %>
 <%% end %>
 
-<%% content_for :body do %>
+<section id="cover" style="height: 200px">
+</section>
+
+<section id="<%= singular_name %>">
+  <div class="container">
+    <div class="row">
+      <div class="sidebar col-sm-4 col-md-3">
+        <ul id="page-sub-nav" class="list-unstyled">
+          <%% ::Refinery::<%= namespacing %>::<%= class_name %>.get_all.each do |<%= singular_name %>| %>
+            <li><%%= link_to <%= singular_name %><% if (title = attributes.detect { |a| a.type.to_s == "string" }).present? %>.<%= title.name %><% else %>.title<% end %>, refinery.<%= namespacing.underscore %>_<%= singular_name %>_path(<%= singular_name %>) %></li>
+          <%% end %>
+        </ul>
+      </div>
+      <div class="col-sm-8 col-md-9">
 <% attributes.each do |attribute| -%>
-  <section>
-    <h1><%= attribute.name.titleize %></h1>
-    <p>
 <% if attribute.type.to_s == 'image' -%>
-      <%%= image_fu @<%= singular_name %>.<%= attribute.name %>, nil %>
+        <h4><%= attribute.name.titleize %></h4>
+        <p>
+          <%%= image_fu @<%= singular_name %>.<%= attribute.name %>, nil %>
+        </p>
 <% elsif attribute.type.to_s == 'resource' -%>
-      <%% if @<%= singular_name %>.<%= attribute.name %>.present? %>
-        <%%= link_to <%= "'#{attribute.name}'" %>, @<%= singular_name %>.<%= attribute.name %>.url %>
-      <%% else %>
-        <%= attribute.name %>
-      <%% end %>
+        <h4><%= attribute.name.titleize %></h4>
+        <p>
+          <%% if @<%= singular_name %>.<%= attribute.name %>.present? %>
+            <%%= link_to <%= "'#{attribute.name}'" %>, @<%= singular_name %>.<%= attribute.name %>.url %>
+          <%% else %>
+            <%= attribute.name %>
+          <%% end %>
+        </p>
+<% elsif attribute.type.to_s == 'string' -%>
+        <h1><%%=raw @<%= singular_name %>.<%= attribute.name %> %></h1>
 <% else -%>
-      <%%=raw @<%= singular_name %>.<%= attribute.name %> %>
+        <%%=raw @<%= singular_name %>.<%= attribute.name %> %>
 <% end -%>
-    </p>
-  </section>
 <% end -%>
-<%% end %>
-
-<%% content_for :side_body do %>
-  <aside>
-    <h2><%%= t('.other') %></h2>
-    <ul id="<%= plural_name %>">
-      <%% @<%= "all_" if plural_name == singular_name%><%= plural_name %>.each do |<%= singular_name %>| %>
-        <li>
-          <%%= link_to <%= singular_name %><% if (title = attributes.detect { |a| a.type.to_s == "string" }).present? %>.<%= title.name %><% else %>.title<% end %>, refinery.<%= namespacing.underscore %>_<%= singular_name %>_path(<%= singular_name %>) %>
-        </li>
-      <%% end %>
-    </ul>
-  </aside>
-<%% end %>
-
-<%%= render '/refinery/content_page' %>
+      </div>
+    </div>
+  </div>
+</section>
